# ET_hackathon

./: .env.example  .gitignore  Agent.py  README.md  cleanup.py  main.py  memory.py  prompt.md  pyproject.toml  run_all.bat
Frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
Frontend/src/: index.css
Frontend/src/components/: FloatingOrbs.tsx  GenerationProgress.tsx  Masonry.css  Masonry.tsx  PromptInput.tsx  Sidebar.tsx  StylePicker.tsx  VideoGallery.tsx  VideoGenerationProgress.tsx  VideoPlayer.tsx
Frontend/src/lib/: api.ts
Frontend/src/pages/: Index.tsx
Remotion_sandbox/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
Remotion_sandbox/app/: package-lock.json  package.json
Remotion_sandbox/docker/: entrypoint.sh  supervisord.conf
Remotion_sandbox/docker/openbox/: autostart
api/: README.md  main.py
samples/dry_run/: README.md  memory.json  notifications.json  script.json
skills/: assets_manager_agent.md  hook_designer_agent.md  math_agent.md  motion_designer_agent.md  scriptwriter_agent.md  storyboard_artist.md  storyboard_styler.md  video_editor_agent.md  voice_actor_agent.md  voiceover_agent.md
tools/: add.py  add_audio_to_video.py  compile_videos.py  create_style_json.py  generate_storyboard_image.py  generate_video_veo.py  generate_voiceover.py  list_audio.py  list_frames.py  list_videos.py  load_script.py  save_script.py  scraper.py  subtract.py
tools/styles/: editorial_collage.json  neon_cyberpunk.json  vox_editorial.json
